@@ -1,4 +1,4 @@
-package com.grafana.opentelemetry;
+package com.grafana.opentelemetry.properties;
 
 import io.opentelemetry.semconv.resource.attributes.ResourceAttributes;
 import org.assertj.core.api.Assertions;
@@ -9,13 +9,14 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.boot.test.system.CapturedOutput;
 import org.springframework.boot.test.system.OutputCaptureExtension;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Stream;
 
 @ExtendWith(OutputCaptureExtension.class)
-class OpenTelemetryConfigTest {
+public class PropertiesReaderTest {
 
     @ParameterizedTest(name = "{0}")
     @MethodSource("overrideCases")
@@ -24,33 +25,33 @@ class OpenTelemetryConfigTest {
         if (explicit != null) {
             resourceAttributes.put(ResourceAttributes.SERVICE_NAME.getKey(), explicit);
         }
-        OpenTelemetryConfig.updateResourceAttribute(resourceAttributes, ResourceAttributes.SERVICE_NAME,
+        PropertiesReader.updateResourceAttribute(resourceAttributes, ResourceAttributes.SERVICE_NAME,
                 override);
 
         if (expected == null) {
             Assertions.assertThat(resourceAttributes).isEmpty();
         } else {
             Assertions.assertThat(resourceAttributes)
-                    .containsExactlyEntriesOf(Map.of(ResourceAttributes.SERVICE_NAME.getKey(), expected));
+                    .containsExactlyEntriesOf(Collections.singletonMap(ResourceAttributes.SERVICE_NAME.getKey(), expected));
         }
     }
 
     private static Stream<Arguments> overrideCases() {
         return Stream.of(
-                Arguments.of("explicit name is kept", "explicit", "explicit", new String[] { "ignored" }),
-                Arguments.of("only override is used", "override", null, new String[] { "override" }),
-                Arguments.of("first non-blank override is used", "override", null, new String[] { " ", "override" }),
-                Arguments.of("first non-empty override is used", "override", null, new String[] { "", "override" }),
-                Arguments.of("first non-null override is used", "override", null, new String[] { null, "override" }),
-                Arguments.of("no value found", null, null, new String[] { " ", null })
+                Arguments.of("explicit name is kept", "explicit", "explicit", new String[]{"ignored"}),
+                Arguments.of("only override is used", "override", null, new String[]{"override"}),
+                Arguments.of("first non-blank override is used", "override", null, new String[]{" ", "override"}),
+                Arguments.of("first non-empty override is used", "override", null, new String[]{"", "override"}),
+                Arguments.of("first non-null override is used", "override", null, new String[]{null, "override"}),
+                Arguments.of("no value found", null, null, new String[]{" ", null})
         );
     }
 
     @ParameterizedTest(name = "{0}")
     @MethodSource("basicAuthCases")
     void getBasicAuthHeader(String name, Optional<String> expected, String expectedOutput,
-            String apiKey, int instanceId, CapturedOutput output) {
-        Optional<String> basicAuthHeader = OpenTelemetryConfig.getBasicAuthHeader(instanceId, apiKey);
+                            String apiKey, int instanceId, CapturedOutput output) {
+        Optional<String> basicAuthHeader = PropertiesReader.getBasicAuthHeader(instanceId, apiKey);
         Assertions.assertThat(basicAuthHeader).isEqualTo(expected);
         Assertions.assertThat(output).contains(expectedOutput);
     }
@@ -81,7 +82,7 @@ class OpenTelemetryConfigTest {
                      String endpoint,
                      Optional<String> authHeader,
                      CapturedOutput output) {
-        Assertions.assertThat(OpenTelemetryConfig.getEndpoint(endpoint, zone, authHeader)).isEqualTo(expected);
+        Assertions.assertThat(PropertiesReader.getEndpoint(endpoint, zone, authHeader)).isEqualTo(expected);
         Assertions.assertThat(output).contains(expectedOutput);
     }
 
@@ -115,8 +116,8 @@ class OpenTelemetryConfigTest {
     @ParameterizedTest(name = "{0}")
     @MethodSource("protocolCases")
     void getProtocol(String name, String expected, String expectedOutput,
-            String protocol, Optional<String> authHeader, CapturedOutput output) {
-        Assertions.assertThat(OpenTelemetryConfig.getProtocol(protocol, authHeader)).isEqualTo(expected);
+                     String protocol, Optional<String> authHeader, CapturedOutput output) {
+        Assertions.assertThat(PropertiesReader.getProtocol(protocol, authHeader)).isEqualTo(expected);
         Assertions.assertThat(output).contains(expectedOutput);
     }
 
@@ -141,32 +142,39 @@ class OpenTelemetryConfigTest {
     @ParameterizedTest(name = "{0}")
     @MethodSource("maskCases")
     void maskAuthHeader(String name, Map<String, String> expected, Map<String, String> given) {
-        Map<String, String> map = OpenTelemetryConfig.maskAuthHeader(given);
+        Map<String, String> map = PropertiesReader.maskAuthHeader(given);
         Assertions.assertThat(map).containsExactlyInAnyOrderEntriesOf(expected);
     }
 
     private static Stream<Arguments> maskCases() {
         return Stream.of(
                 Arguments.of("masked",
-                        Map.of(
+                        map2(
                                 "foo", "bar",
-                                OpenTelemetryConfig.OTLP_HEADERS, "Authorization=Basic NTUz..."),
-                        Map.of(
+                                PropertiesReader.OTLP_HEADERS, "Authorization=Basic NTUz..."),
+                        map2(
                                 "foo", "bar",
-                                OpenTelemetryConfig.OTLP_HEADERS, "Authorization=Basic NTUzMzg2OmV5SnJJam9pW")),
+                                PropertiesReader.OTLP_HEADERS, "Authorization=Basic NTUzMzg2OmV5SnJJam9pW")),
                 Arguments.of("short auth header",
-                        Map.of(
+                        map2(
                                 "foo", "bar",
-                                OpenTelemetryConfig.OTLP_HEADERS, ""),
-                        Map.of(
+                                PropertiesReader.OTLP_HEADERS, ""),
+                        map2(
                                 "foo", "bar",
-                                OpenTelemetryConfig.OTLP_HEADERS, "")),
+                                PropertiesReader.OTLP_HEADERS, "")),
                 Arguments.of("no auth header",
-                        Map.of(
+                        Collections.singletonMap(
                                 "foo", "bar"),
-                        Map.of(
+                        Collections.singletonMap(
                                 "foo", "bar"))
         );
+    }
+
+    static Map<String, String> map2(String key1, String val1, String key2, String val2) {
+        HashMap<String, String> map = new HashMap<>();
+        map.put(key1, val1);
+        map.put(key2, val2);
+        return map;
     }
 
 }
